<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#000000" >

    <ImageView
        android:id="@+id/img_profilePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/contentDescription"
        android:src="@drawable/beansproutlogin" />

    <Button
        android:id="@+id/btn_login"
        style="android:buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:background="@drawable/custombutton"
        android:text="@string/loginbuttontext" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtUsename"
        android:layout_centerVertical="true"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/passwordhint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_signup"
        style="@drawable/custombutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/custombutton"
        android:text="@string/btn_signup" />

    <EditText
        android:id="@+id/txtUsename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/usernamehint"/>

        <requestFocus />
	
</RelativeLayout>