<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/otheractivitybackground"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtChildname"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:background="#FEF1B5"/>

    <ImageButton
        android:id="@+id/img_profilePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profileDescription"
        android:src="@drawable/joshypic" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/statustexthint" 
        />


    <Button
        android:id="@+id/btn_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custombutton"
        android:text="@string/statusbuttontext" 
        />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FEF1B5"
        android:divider="#000000"
        android:dividerHeight="@dimen/my_listdivider"
        android:headerDividersEnabled="true" >

        </ListView>
   

</LinearLayout>